--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -16,6 +16,9 @@
                     </div>
                 </a>
             </div>
+            <audio controls>
+  <source src="Pharrell Williams - Happy.ogg" type="audio/ogg"/>
+</audio>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
                     <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
